--- a/_layouts/external.html
+++ b/_layouts/external.html
@@ -6,6 +6,6 @@
 <!--     <meta http-equiv="refresh" content="0;url={{ page.external_url }}"> -->
   </head>
   <body>
-    <iframe src="{{ page.external_url }}"></iframe>
+    <iframe width="298" height="52" frameborder="no" border="0" marginwidth="0" marginheight="0" src="{{ page.external_url }}"></iframe>
   </body>
 </html>
