--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,7 @@ layout: default
         <li>
             <h3>
                 <span class="post-meta">{{ post.date | date: date_format }}</span>
+                <span class="post-meta">[{{ post.misc }}]</span>
                 <a class="post-link" href="{{ post.url | relative_url }}">
                     {{ post.title | escape }}
                 </a>
